--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/tapu?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://freedb.tech:3306/freedbtech_tapu?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=freedbtech_ferhat
+spring.datasource.password=GBj.D!PmJsMB66q
 server.error.path=/error
 spring.devtools.restart.enabled=true
 
